# SingleColonyVerification

./: .agent.md  .gitignore  CMakeLists.txt  Utils.cpp  single_colony_verification.py
Input/: Index.xml
Output/: 2026-04-21-22-19-17_object.csv  2026-04-21-22-19-17_well_plate.csv  2026-04-21-22-59-20_object.csv  2026-04-21-22-59-20_well_plate.csv  2026-04-21-23-06-54_object.csv  2026-04-21-23-06-54_well_plate.csv  2026-04-21-23-07-47_object.csv  2026-04-21-23-07-47_well_plate.csv  A1.json  A2.json  A3.json  A4.json  A5.json  A6.json  B1.json  B2.json  B3.json  B4.json  B5.json  B6.json  C1.json  C2.json  C3.json  C4.json  C5.json  C6.json  D1.json  D2.json  D3.json  D4.json  D5.json  D6.json  object.csv  well_plate_cpu_stitch_fix.csv  well_plate_origin.csv
include/: Config.hpp  FileIO.hpp  GpuProcessor.hpp  NativeGpuProcessor.cuh  ThreadPool.hpp
src/: NativeGpuProcessor.cu  ThreadPool.cpp  Utils.cpp  main.cpp
